# gaussian-splat-tools

./: .justfile  Cargo.toml  README.md  test.splatc
TestData/: OneSplat.splat  test.json  test.splat  test.txt
src/: actions.rs  cli.rs  conversions.rs  guess_format.rs  main.rs  splat_a.rs  splat_b.rs  splat_c.rs  splat_format.rs  support.rs  uber_splat.rs
